<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent">

    <RelativeLayout
        android:id="@+id/profile_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:background="@color/colorLightGray"
        android:gravity="center_vertical">




        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_margin="15dp"
            android:clickable="true"
            android:paddingTop="15dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_userfull"
            app:civ_border_color="@color/colorAccent"
            app:civ_border_width="1dp" />

        <!--android:elevation="10dp"-->

        <TextView

            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/profile"
            android:layout_centerHorizontal="true"
            android:layout_margin="5dp"
            android:text="Gizem Koçak"
            android:textColor="@color/colorIndigo"
            android:textSize="20sp"
            android:textStyle="normal" />


    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_layout"
        android:background="@color/colorLightGray"
        android:gravity="center_vertical"
        android:orientation="vertical">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <!--Eğitim Durumu-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:background="@color/colorAccent"
                    android:orientation="vertical"
                    android:padding="5dp">


                    <TextView
                        android:id="@+id/txtEducationStatus"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/EducationStatus"
                        android:textColor="@color/colorPrimary"
                        android:textSize="15sp"
                        android:textStyle="normal" />


                    <TextView
                        android:id="@+id/txtEducationStatusis"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:hint="Lisans Mezunu"
                        android:textSize="15sp"
                        android:textStyle="normal" />


                </LinearLayout>


                <!--Meslek-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:background="@color/colorAccent"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <TextView
                        android:id="@+id/txtJob"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Job"
                        android:textColor="@color/colorPrimary"
                        android:textSize="15sp"
                        android:textStyle="normal" />


                    <TextView
                        android:id="@+id/txtJobis"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:hint="Bilgisayar Mühendisi"
                        android:textSize="15sp"
                        android:textStyle="normal" />


                </LinearLayout>


                <!--Medeni Hali-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:background="@color/colorAccent"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <TextView
                        android:id="@+id/txtMarriage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Marriage"
                        android:textColor="@color/colorPrimary"
                        android:textSize="15sp"
                        android:textStyle="normal" />


                    <TextView
                        android:id="@+id/txtMarriageis"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:hint="Bekar"
                        android:textSize="15sp"
                        android:textStyle="normal" />
                </LinearLayout>


                <!--Cinsiyet-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:background="@color/colorAccent"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <TextView
                        android:id="@+id/txtGender"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:text="@string/Gender"
                        android:textColor="@color/colorPrimary"
                        android:textSize="15sp"
                        android:textStyle="normal" />

                    <TextView
                        android:id="@+id/txtGenderis"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:hint="Kadın"
                        android:textSize="15sp"
                        android:textStyle="normal" />
                </LinearLayout>


                <!--Kan Grubu-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:background="@color/colorAccent"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <TextView
                        android:id="@+id/txtBloodGroup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:text="@string/BloodGroup"
                        android:textColor="@color/colorPrimary"
                        android:textSize="15sp"
                        android:textStyle="normal" />

                    <TextView
                        android:id="@+id/txtBloodGroupis"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:hint="0 Rh +"
                        android:textSize="15sp"
                        android:textStyle="normal" />
                </LinearLayout>

            </LinearLayout>
        </ScrollView>

    </LinearLayout>


</RelativeLayout>